@@ -1562,7 +1562,7 @@
 	'S_JAPANESE_JP'=>			'日语 (JP)',
 	'S_CHINESE_CN'=>			'中文 (CN)',
 	'S_DUTCH_NL'=>			'Dutch (NL)',
-	'S_HUNGARY_HU'=>			'Hungary (HU)',
+	'S_HUNGARIAN_HU'=>			'Hungary (HU)',
 	'S_POLISH_PL'=>			'Polish (PL)',
 	'S_UKRAINIAN_UA'=>			'Ukrainian (UA)',
 	'S_ZABBIX_BIG'=>			'ZABBIX',
