@@ -1713,7 +1713,7 @@
 	'S_JAPANESE_JP'=>			'Japanese (JP)',
 	'S_CHINESE_CN'=>			'Chinese (CN)',
 	'S_DUTCH_NL'=>			'Dutch (NL)',
-	'S_HUNGARY_HU'=>			'Hungary (HU)',
+	'S_HUNGARIAN_HU'=>			'Hungary (HU)',
 	'S_POLISH_PL'=>			'Polish (PL)',
 	'S_UKRAINIAN_UA'=>			'Ukrainian (UA)',
 	'S_ZABBIX_BIG'=>			'ZABBIX',
